css/style.css
*, 
*::before, 
*::after {
  box-sizing: border-box;
}


/* Custom Properties -small screen -> change with @media for big screens */

:root {
  --ff-primary: 'Source Sans Pro', sans-serif;
  --ff-secondary: 'Source Code Pro', monospace;

  --fw-reg: 300;
  --fw-bold: 900;

  --clr-light: #fff;
  --clr-dark: #303030;
  --clr-accent: #16e0bd;
  --clr-body: #e4e4e4;

  --fs-h1: 3rem;
  --fs-h2: 2.25rem;
  --fs-h3: 1.25rem;
  --fs-body: 1rem;

  --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
        0.125em 0.125em 0.125em  rgba(0,0,0,.25);
  --darkShadow: 2px 4px 7px rgba(50, 50, 50, 0.4);
  --lightShadow: -2px -4px 7px rgba(255, 255, 255, 0.961);
  
}


/* Custom Properties - big screen */

@media (min-width: 800px) {
  :root {
    --fs-h1: 4.5rem;
    --fs-h2: 3.75rem;
    --fs-h3: 1.5rem;
    --fs-body: 1.25rem;
  }
}


/* General styles */

html {
  scroll-behavior: smooth;
  /* background-color: var(--clr-accent); */
}

body {
  background: var(--clr-body);
  color: var(--clr-dark);
  margin: 0;
  font-family: var(--ff-primary);
  font-size: var(--fs-body);
  line-height: 1.6;
  border-left: 0;
  transition: background-color 350ms cubic-bezier(.5, 0, .5, 1);
}

::selection {
  background: var(--clr-accent);
  color: var(--clr-dark);
}

/* scrollbar */
/* ::-webkit-scrollbar {
  background-color: var(--clr-dark);
  width: 3px;
}
::-webkit-scrollbar-thumb {
  background-color: var(--clr-accent);
} */


section {
  padding: 5em 2em;
}

img {
  display: block;
  max-width: 100%;
  border-radius: 16px;
}

a {
  text-decoration: none;
  color: var(--clr-dark);
}
a:hover {
  text-decoration: currentColor underline 2px;
  /* text-decoration-style: wavy; */
}

ul {
  list-style: none;
  padding: 0;
}


/* Buttons */

.btn {
  background: var(--clr-accent);
  letter-spacing: 0.8px;
  color: var(--clr-dark);
  font-size: var(--fs-body);
  font-weight: var(--fw-bold);
  padding: .7em 4em;
  transition: box-shadow .3s, transform .3s ease-in-out;
}
.btn:hover {
  transform: scale(1.01);
  box-shadow: 0px 5px 10px -5px var(--clr-accent);
}




/* Theme toggle */

/* .theme-toggler {
} */

.settings-option {
  /* padding: 0em 4em; */
  border-radius: 5px;
  display: flex;
  align-items: center; 
  position: absolute;
  right: -3.2em;
  top: 9em;
  transform: rotate(90deg);
  z-index: 500;
}

.theme-toggler__checkbox {
  opacity: 0;
  position: absolute;
  right: 30px;
  top: 25%;
  z-index: 1; 
}

.theme-toggler__label {
  font-weight: normal;
  font-size: 1.2em;
  display: inline-block;
  vertical-align: middle;
  flex: 1;
  margin-right: .4em; 
  color:#35394b;
}

.theme-toggler__switch {
  width: 50px;
  height: 25px;
  border-radius: 1em;
  position: relative;
  cursor: pointer;
  background: var(--clr-dark);
  border: 2px solid var(--clr-dark);
  transition: all .1s linear;
  display: inline-block;
  vertical-align: middle; 
  
}

.theme-toggler__switch::after {
  content: "";
  position: absolute;
  width: 21px;
  height: 21px;
  margin-top: 0px;
  margin-left: 1px;
  border-radius: 1em;
  background: var(--clr-body);
  border: 1px solid #eee;
  box-shadow: 2px 5px 10px -2px rgba(0, 0, 0, 0.2);
  transition: all .1s linear; }

.theme-toggler__checkbox:focus + .theme-toggler__switch {
  box-shadow: 0 0 0 5px #fff, 0 0 0 7px var(--clr-accent);
  outline: 3px solid transparent; 
}

.theme-toggler__checkbox:focus:not(:focus-visible) + .theme-toggler__switch {
  box-shadow: none; 
}

.theme-toggler__checkbox:checked + .theme-toggler__switch {
  background: var(--clr-accent);
  border-color: var(--clr-accent); 
}

.theme-toggler__checkbox:checked + .theme-toggler__switch::after {
  transform: translatex(22px);
  transition: transform .1s linear;
}


/* Dark mode */

[data-theme="dark"] body {
  background: var(--clr-dark);
}
[data-theme="dark"] p {
  color: var(--clr-body);
}
[data-theme="dark"] a {
  color: var(--clr-body);
}
[data-theme="dark"] a:hover {
  text-decoration: currentColor underline 2px;
}
[data-theme="dark"] header {
  background-color: var(--clr-dark);
  transition: background-color 350ms cubic-bezier(.5, 0, .5, 1);
}
[data-theme="dark"] nav {
  background: var(--clr-dark);
  color: var(--clr-body);
}
[data-theme="dark"] .nav__link:hover {
  -webkit-text-stroke-width: 1px;
  -webkit-text-fill-color: var(--clr-dark);
  color: var(--clr-body);
}
[data-theme="dark"] .theme-toggler__label {
  color: var(--clr-body);
}
[data-theme="dark"] .theme-toggler__switch::after {
  background: var(--clr-body);
  background-size: cover;
  
}
[data-theme="dark"] .hamburger,
[data-theme="dark"] .hamburger::before,
[data-theme="dark"] .hamburger::after {
  background: var(--clr-body);
}
[data-theme="dark"] .nav-open .hamburger {
  background: var(--clr-light);
}
[data-theme="dark"] .nav-open .hamburger::before {
  background: var(--clr-light);
}
[data-theme="dark"] .text-logo {
  color: var(--clr-light);
  -webkit-text-fill-color: var(--clr-dark);
  opacity: 1;
}
[data-theme="dark"] .text-logo:hover {
  text-shadow: 2px 4px 7px #242424,
  -2px -4px 7px #3c3c3c;
}
[data-theme="dark"] .logo:hover a {
  text-decoration: none;
}
[data-theme="dark"] .section__subtitle {
  color: var(--clr-dark);
}
[data-theme="dark"] .section__subtitle--work {
  color: var(--clr-body);
}
[data-theme="dark"] .intro {
  /* background: var(--clr-dark); */
  color: var(--clr-body);
}
[data-theme="dark"] .my-services {
  background: linear-gradient(rgba(0, 0, 0, 0.4), 
  rgba(0, 0, 0, 0.4)), url("../img/services-bg.jpg" );
  background-size: cover;
}
[data-theme="dark"] .about-me {
  /* background: #443d52; */
  color: var(--clr-light);
}
[data-theme="dark"] .my-work {
  background-color: var(--clr-dark);
  color: var(--clr-accent);
}
/* [data-theme="dark"] .portfolio__item {
  box-shadow: 0 0 0 1px var(--clr-dark) inset;
} */
/* [data-theme="dark"] .footer {
  background: #443d52;
} */





/* Typography */

strong { 
  font-weight: var(--fw-bold) 
}
/* ... */

